objects/Customer_Type__c.object
<CustomObject>
    <fields>
        <fullName>CodeType__c</fullName>
        <description>Feed outbound-Customer Type</description>
        <label>CodeType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerConsumer__c</fullName>
        <label>CustomerConsumer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Description__c</fullName>
        <label>Display Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TenantID__c</fullName>
        <formula>&apos;ALORICAALTRIA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TenantID</label>
        <type>Text</type>
    </fields>
    <label>Customer Type</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Customer Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>